--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                     <span style="margin-left: 4px;">Garden Grove, CA</span>
                 </p>
                 <p class="text-white text-sm" style="margin-bottom: 0rem;">
-                    <i class="fas fa-clock" style="font-size: 0.75rem;"></i>
+                    <i class="fa-solid fa-paintbrush" style="font-size: 0.75rem;"></i>
                     <span style="margin-left: 4px;">Pacific Time Zone : <span id="pacific-time">00:00</span></span>
                 </p>
                 <p class="text-white text-sm" style="margin-bottom: 0.5rem;">
@@ -617,6 +617,10 @@
                 <li>
                     <img class="x64-logo" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Roblox_Logo.svg" alt="Roblox Logo">
                     <a href="https://www.roblox.com/users/4012807793">Roblox</a>
+                </li>
+                <li>
+                    <img class="x64-logo" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Roblox_Logo.svg" alt="Roblox Logo">
+                    <a href="https://streekaiz.github.io/User-Interfaces/index.html">User Interfaces</a>
                 </li>
             </ul>
         </div>
