--- a/index.html
+++ b/index.html
@@ -489,6 +489,10 @@
             text-align: center;
         }
 
+        .forums-section ul li .fa-paintbrush {
+            margin-right: 8px;
+        }
+
         .x64-logo {
             width: 16px;
             height: 16px;
